# Zero-Touch-Provisioning

./: .gitmodules  CMakeLists.txt  README.md  ZTP.cfg  configure.sh
data/: inesConfig.ini
data/Certs/: README.txt
include/: aws_demo.h  vaultic_tls_config_292.h
src/: aws_demo.c  main.c
